Update API Paths (#10)
* Group auth apis, move extra path params

* Generate new swagger.yml

* Update function calls in UI
